--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
+    "react-dropdown": "^1.4.0",
     "react-modal": "^3.3.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
+    "react-widgets": "^4.2.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
